Publishing to GitHub Pages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="profile-picture"><img src="./img/profile.jfif" alt="Wilson Ease" data-tetid="slackDisplayImage"></div>
             <div>
                 <ul class="profile-details">
-                    <li class="username" data-testid="slackUserName">Wilson Ease </li>
+                    <li class="username" data-testid="slackUserName">Wilson Adejoh </li>
                     <li data-testid="myTrack">Frontend</li>
                     <br>
                     <li>About</li>
